--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
-    "firebase": "^9.6.11",
+    "firebase": "^10.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-loader-kit": "^2.0.8",
+    "react-native-responsive-dimensions": "^3.1.1",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
